# OpenSeeker-AgentDataFactory

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: experiment-roadmap.md  remote-approval-packet.md  resume-material.md
openseeker_factory/: __init__.py  backends.py  cli.py  evaluation.py  pipeline.py  schema.py  seed_bank.py
runs/: launch_eval_base_qwen3_8b_v4hard_gpu7.sh  launch_eval_base_qwen3_8b_v5blindhard_gpu7.sh  launch_eval_canonical_v2_fixed_heldout200_gpu7.sh  launch_eval_canonical_v2_fixed_v3clean_gpu7.sh  launch_eval_canonical_v3_v3clean_gpu7.sh  launch_eval_canonical_v3_v4hard_gpu7.sh  launch_eval_canonical_v3_v4heldout_gpu7.sh  launch_eval_canonical_v3_v5blindhard_gpu7.sh  launch_eval_canonical_v4_v4hard_gpu7.sh  launch_eval_canonical_v4_v4heldout_gpu7.sh  launch_eval_canonical_v4_v5blindhard_gpu7.sh  launch_eval_cleaned1k_v3clean_gpu7.sh  launch_eval_mixed_v3_v4_v5blind_v4heldout_gpu7.sh  launch_eval_mixed_v3_v4_v5blind_v5blindhard_gpu7.sh  launch_eval_mixed_v3_v4_v5blind_v6blindtoolchoice_gpu7.sh  launch_eval_mixed_v3_v4_v5blind_v6trained_v4heldout_gpu5.sh  launch_eval_mixed_v3_v4_v5blind_v6trained_v5blindhard_gpu6.sh  launch_eval_mixed_v3_v4_v5blind_v6trained_v6blindtoolchoice_gpu6.sh  launch_eval_mixed_v3_v4_v5blind_v6trained_v6blindtoolchoice_gpu7.sh  launch_sft_canonical_v2_fixed_1k_gpu0127.sh  launch_sft_mixed_v3_v4_v5blind_2k_gpu0127.sh  launch_sft_mixed_v3_v4_v5blind_v6blindtoolchoice_2p4k_gpu0125.sh  launch_sft_mixed_v3_v4_v5blind_v6blindtoolchoice_2p4k_gpu0127.sh  launch_sft_mixed_v3_v4_v5blind_v6blindtoolchoice_2p4k_gpu1257.sh
(+97 files in other folders)
